fix navabar visibility in contact page and remove hero images on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,7 @@
 #navbar {
   display: block;
+  position: sticky;
+  top: 0;
 }
 #navbar .logo {
   display: flex;
@@ -14,6 +16,11 @@
 #hero {
   height: 90vh;
   top: 0;
+}
+
+.menu-hero,
+.hero {
+  display: none;
 }
 #hero h1 {
   font-size: 1.7rem;
